# mad_xauusd_brief

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_dashboard.bat  run_morning_briefing.bat
daily_inputs/: 2026-07-06.md
data/: engine_ops_events.jsonl  engine_reviews.csv
docs/: engine_sop.md  rule_change_protocol.md  rule_changes.md  scheduler.md  scheduling.md
scripts/: assemble_journal.py  engine_ops_logger.py  generate_engine_monthly_report.py  generate_engine_weekly_report.py  generate_weekly_digest.py  generate_xauusd_refresh.py  log_engine_review.py  query_engine_ops.py  run_backtest.py  run_candle_engine.py  run_daily.bat  run_daily.sh  run_fusion_engine.py  run_weekly_digest.bat  setup_cron_linux.sh  setup_task_windows.bat  setup_task_windows.ps1  update_engine_review.py  update_env.py  update_jobs_morning_only.py  validate_engine_reviews.py
tests/: dashboard_helpers.py  mock_llm.py  test_anomaly.py  test_candlestick_engine.py  test_candlestick_report.py  test_compute_indicators.py  test_dashboard_chart.py  test_dashboard_e10.py  test_dashboard_e11.py  test_dashboard_e12.py  test_dashboard_e7.py  test_dashboard_e8.py  test_dashboard_e9.py  test_dashboard_fusion.py  test_execution_intent.py  test_fallback_and_notes.py  test_fetch_news.py  test_format_report.py  test_fusion_engine.py  test_integration_candlestick.py  test_market_data.py  test_mvp_v1.py  test_narrator.py  test_scheduling_scripts.py  test_strategy_health_approval.py  test_strategy_health_diagnostics_cost.py  test_strategy_health_diagnostics_drawdown.py  (+15 more)
(+159 files in other folders)
