[project]
name = "daily-xauusd-brief"
version = "0.1.0"
description = "每日黃金簡報 Bot — 自動整理 XAUUSD 價格、技術指標與新聞"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mad" }]
keywords = ["xauusd", "gold", "briefing", "telegram"]

dependencies = [
    "httpx>=0.27,<1.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "feedparser>=6.0",
    "tenacity>=8.2,<9.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
"daily-xauusd-brief" = "daily_xauusd_brief.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_xauusd_brief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
